fix(core): remove deprecated java apis